// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Telegram 1 1`] = `
<Button
  big={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  solidcircle={true}
>
  <styled.a
    aria-label="Share on Telegram"
    href="https://telegram.me/share/url?text=http%3A%2F%2Fsharingbuttons.io&amp;url=I%20am%20so%20cool"
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Telegram"
      className="sc-bwzfXH bSlLDy"
      href="https://telegram.me/share/url?text=http%3A%2F%2Fsharingbuttons.io&amp;url=I%20am%20so%20cool"
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-fjdhpX gErvTJ"
        >
          <styled.div
            aria-hidden="true"
            solidcircle={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 23.5c6.35 0 11.5-5.15 11.5-11.5S18.35.5 12 .5.5 5.65.5 12 5.65 23.5 12 23.5zM2.505 11.053c-.31.118-.505.738-.505.738s.203.62.513.737l3.636 1.355 1.417 4.557a.787.787 0 0 0 1.25.375l2.115-1.72a.29.29 0 0 1 .353-.01L15.1 19.85a.786.786 0 0 0 .746.095.786.786 0 0 0 .487-.573l2.793-13.426a.787.787 0 0 0-1.054-.893l-15.568 6z"
                  fillRule="evenodd"
                />
              </svg>
               share on 
              Telegram
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Telegram 2 1`] = `
<Button
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
  solidcircle={true}
>
  <styled.a
    aria-label="Share on Telegram"
    href="https://telegram.me/share/url?text=http%3A%2F%2Fsharingbuttons.io&amp;url=I%20am%20so%20cool"
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Telegram"
      className="sc-bwzfXH bSlLDy"
      href="https://telegram.me/share/url?text=http%3A%2F%2Fsharingbuttons.io&amp;url=I%20am%20so%20cool"
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-fjdhpX gErvTJ"
        >
          <styled.div
            aria-hidden="true"
            solidcircle={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 23.5c6.35 0 11.5-5.15 11.5-11.5S18.35.5 12 .5.5 5.65.5 12 5.65 23.5 12 23.5zM2.505 11.053c-.31.118-.505.738-.505.738s.203.62.513.737l3.636 1.355 1.417 4.557a.787.787 0 0 0 1.25.375l2.115-1.72a.29.29 0 0 1 .353-.01L15.1 19.85a.786.786 0 0 0 .746.095.786.786 0 0 0 .487-.573l2.793-13.426a.787.787 0 0 0-1.054-.893l-15.568 6z"
                  fillRule="evenodd"
                />
              </svg>
               
              Telegram
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Telegram 3 1`] = `
<Button
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
  solidcircle={true}
>
  <styled.a
    aria-label="Share on Telegram"
    href="https://telegram.me/share/url?text=http%3A%2F%2Fsharingbuttons.io&amp;url=I%20am%20so%20cool"
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Telegram"
      className="sc-bwzfXH bSlLDy"
      href="https://telegram.me/share/url?text=http%3A%2F%2Fsharingbuttons.io&amp;url=I%20am%20so%20cool"
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div
        small={true}
      >
        <div
          className="sc-fjdhpX gErvTJ"
        >
          <styled.div
            aria-hidden="true"
            solidcircle={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 23.5c6.35 0 11.5-5.15 11.5-11.5S18.35.5 12 .5.5 5.65.5 12 5.65 23.5 12 23.5zM2.505 11.053c-.31.118-.505.738-.505.738s.203.62.513.737l3.636 1.355 1.417 4.557a.787.787 0 0 0 1.25.375l2.115-1.72a.29.29 0 0 1 .353-.01L15.1 19.85a.786.786 0 0 0 .746.095.786.786 0 0 0 .487-.573l2.793-13.426a.787.787 0 0 0-1.054-.893l-15.568 6z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Telegram 4 1`] = `
<Button
  big={true}
  circle={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
>
  <styled.a
    aria-label="Share on Telegram"
    href="https://telegram.me/share/url?text=http%3A%2F%2Fsharingbuttons.io&amp;url=I%20am%20so%20cool"
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Telegram"
      className="sc-bwzfXH bSlLDy"
      href="https://telegram.me/share/url?text=http%3A%2F%2Fsharingbuttons.io&amp;url=I%20am%20so%20cool"
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-fjdhpX gErvTJ"
        >
          <styled.div
            aria-hidden="true"
          >
            <div
              aria-hidden="true"
              className="sc-htpNat dZQCuR"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="11.5"
                />
                <path
                  d="M2.505 11.053c-.31.118-.505.738-.505.738s.203.62.513.737l3.636 1.355 1.417 4.557a.787.787 0 0 0 1.25.375l2.115-1.72a.29.29 0 0 1 .353-.01L15.1 19.85a.786.786 0 0 0 .746.095.786.786 0 0 0 .487-.573l2.793-13.426a.787.787 0 0 0-1.054-.893l-15.568 6z"
                />
              </svg>
               share on 
              Telegram
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Telegram 5 1`] = `
<Button
  circle={true}
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
>
  <styled.a
    aria-label="Share on Telegram"
    href="https://telegram.me/share/url?text=http%3A%2F%2Fsharingbuttons.io&amp;url=I%20am%20so%20cool"
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Telegram"
      className="sc-bwzfXH bSlLDy"
      href="https://telegram.me/share/url?text=http%3A%2F%2Fsharingbuttons.io&amp;url=I%20am%20so%20cool"
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-fjdhpX gErvTJ"
        >
          <styled.div
            aria-hidden="true"
          >
            <div
              aria-hidden="true"
              className="sc-htpNat dZQCuR"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="11.5"
                />
                <path
                  d="M2.505 11.053c-.31.118-.505.738-.505.738s.203.62.513.737l3.636 1.355 1.417 4.557a.787.787 0 0 0 1.25.375l2.115-1.72a.29.29 0 0 1 .353-.01L15.1 19.85a.786.786 0 0 0 .746.095.786.786 0 0 0 .487-.573l2.793-13.426a.787.787 0 0 0-1.054-.893l-15.568 6z"
                />
              </svg>
               
              Telegram
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Telegram 6 1`] = `
<Button
  circle={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
>
  <styled.a
    aria-label="Share on Telegram"
    href="https://telegram.me/share/url?text=http%3A%2F%2Fsharingbuttons.io&amp;url=I%20am%20so%20cool"
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Telegram"
      className="sc-bwzfXH bSlLDy"
      href="https://telegram.me/share/url?text=http%3A%2F%2Fsharingbuttons.io&amp;url=I%20am%20so%20cool"
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div
        small={true}
      >
        <div
          className="sc-fjdhpX gErvTJ"
        >
          <styled.div
            aria-hidden="true"
          >
            <div
              aria-hidden="true"
              className="sc-htpNat dZQCuR"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="11.5"
                />
                <path
                  d="M2.505 11.053c-.31.118-.505.738-.505.738s.203.62.513.737l3.636 1.355 1.417 4.557a.787.787 0 0 0 1.25.375l2.115-1.72a.29.29 0 0 1 .353-.01L15.1 19.85a.786.786 0 0 0 .746.095.786.786 0 0 0 .487-.573l2.793-13.426a.787.787 0 0 0-1.054-.893l-15.568 6z"
                />
              </svg>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Telegram 7 1`] = `
<Button
  big={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  solid={true}
>
  <styled.a
    aria-label="Share on Telegram"
    href="https://telegram.me/share/url?text=http%3A%2F%2Fsharingbuttons.io&amp;url=I%20am%20so%20cool"
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Telegram"
      className="sc-bwzfXH bSlLDy"
      href="https://telegram.me/share/url?text=http%3A%2F%2Fsharingbuttons.io&amp;url=I%20am%20so%20cool"
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-fjdhpX gErvTJ"
        >
          <styled.div
            aria-hidden="true"
            solid={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M.707 8.475C.275 8.64 0 9.508 0 9.508s.284.867.718 1.03l5.09 1.897 1.986 6.38a1.102 1.102 0 0 0 1.75.527l2.96-2.41a.405.405 0 0 1 .494-.013l5.34 3.87a1.1 1.1 0 0 0 1.046.135 1.1 1.1 0 0 0 .682-.803l3.91-18.795A1.102 1.102 0 0 0 22.5.075L.706 8.475z"
                />
              </svg>
               share on 
              Telegram
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Telegram 8 1`] = `
<Button
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
  solid={true}
>
  <styled.a
    aria-label="Share on Telegram"
    href="https://telegram.me/share/url?text=http%3A%2F%2Fsharingbuttons.io&amp;url=I%20am%20so%20cool"
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Telegram"
      className="sc-bwzfXH bSlLDy"
      href="https://telegram.me/share/url?text=http%3A%2F%2Fsharingbuttons.io&amp;url=I%20am%20so%20cool"
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-fjdhpX gErvTJ"
        >
          <styled.div
            aria-hidden="true"
            solid={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M.707 8.475C.275 8.64 0 9.508 0 9.508s.284.867.718 1.03l5.09 1.897 1.986 6.38a1.102 1.102 0 0 0 1.75.527l2.96-2.41a.405.405 0 0 1 .494-.013l5.34 3.87a1.1 1.1 0 0 0 1.046.135 1.1 1.1 0 0 0 .682-.803l3.91-18.795A1.102 1.102 0 0 0 22.5.075L.706 8.475z"
                />
              </svg>
               
              Telegram
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Telegram 9 1`] = `
<Button
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
  solid={true}
>
  <styled.a
    aria-label="Share on Telegram"
    href="https://telegram.me/share/url?text=http%3A%2F%2Fsharingbuttons.io&amp;url=I%20am%20so%20cool"
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Telegram"
      className="sc-bwzfXH bSlLDy"
      href="https://telegram.me/share/url?text=http%3A%2F%2Fsharingbuttons.io&amp;url=I%20am%20so%20cool"
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div
        small={true}
      >
        <div
          className="sc-fjdhpX gErvTJ"
        >
          <styled.div
            aria-hidden="true"
            solid={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M.707 8.475C.275 8.64 0 9.508 0 9.508s.284.867.718 1.03l5.09 1.897 1.986 6.38a1.102 1.102 0 0 0 1.75.527l2.96-2.41a.405.405 0 0 1 .494-.013l5.34 3.87a1.1 1.1 0 0 0 1.046.135 1.1 1.1 0 0 0 .682-.803l3.91-18.795A1.102 1.102 0 0 0 22.5.075L.706 8.475z"
                />
              </svg>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Telegram 11 1`] = `
<Button
  circle={true}
>
  <styled.a
    aria-label="Share on Telegram"
    href="https://telegram.me/share/url?text=&amp;url="
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Telegram"
      className="sc-bwzfXH bSlLDy"
      href="https://telegram.me/share/url?text=&amp;url="
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-fjdhpX gErvTJ"
        >
          <styled.div
            aria-hidden="true"
          >
            <div
              aria-hidden="true"
              className="sc-htpNat dZQCuR"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="11.5"
                />
                <path
                  d="M2.505 11.053c-.31.118-.505.738-.505.738s.203.62.513.737l3.636 1.355 1.417 4.557a.787.787 0 0 0 1.25.375l2.115-1.72a.29.29 0 0 1 .353-.01L15.1 19.85a.786.786 0 0 0 .746.095.786.786 0 0 0 .487-.573l2.793-13.426a.787.787 0 0 0-1.054-.893l-15.568 6z"
                />
              </svg>
               
              Telegram
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Telegram 11 2`] = `
<Button
  solidcircle={true}
>
  <styled.a
    aria-label="Share on Telegram"
    href="https://telegram.me/share/url?text=&amp;url="
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Telegram"
      className="sc-bwzfXH bSlLDy"
      href="https://telegram.me/share/url?text=&amp;url="
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-fjdhpX gErvTJ"
        >
          <styled.div
            aria-hidden="true"
            solidcircle={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 23.5c6.35 0 11.5-5.15 11.5-11.5S18.35.5 12 .5.5 5.65.5 12 5.65 23.5 12 23.5zM2.505 11.053c-.31.118-.505.738-.505.738s.203.62.513.737l3.636 1.355 1.417 4.557a.787.787 0 0 0 1.25.375l2.115-1.72a.29.29 0 0 1 .353-.01L15.1 19.85a.786.786 0 0 0 .746.095.786.786 0 0 0 .487-.573l2.793-13.426a.787.787 0 0 0-1.054-.893l-15.568 6z"
                  fillRule="evenodd"
                />
              </svg>
               
              Telegram
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Telegram 12 1`] = `
<Button>
  <styled.a
    aria-label="Share on Telegram"
    href="https://telegram.me/share/url?text=&amp;url="
    rel="noreferrer noopener"
    target="_blank"
  >
    <a
      aria-label="Share on Telegram"
      className="sc-bwzfXH bSlLDy"
      href="https://telegram.me/share/url?text=&amp;url="
      rel="noreferrer noopener"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-fjdhpX gErvTJ"
        >
          <styled.div
            aria-hidden="true"
            solid={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M.707 8.475C.275 8.64 0 9.508 0 9.508s.284.867.718 1.03l5.09 1.897 1.986 6.38a1.102 1.102 0 0 0 1.75.527l2.96-2.41a.405.405 0 0 1 .494-.013l5.34 3.87a1.1 1.1 0 0 0 1.046.135 1.1 1.1 0 0 0 .682-.803l3.91-18.795A1.102 1.102 0 0 0 22.5.075L.706 8.475z"
                />
              </svg>
               
              Telegram
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Button>
`;

exports[`Telegram 13 1`] = `
<Button
  simple={true}
>
  <styled.a
    aria-label="Share on Telegram"
    href="https://telegram.me/share/url?text=&amp;url="
    rel="noreferrer noopener"
    simple={true}
    target="_blank"
  >
    <a
      aria-label="Share on Telegram"
      className="sc-bwzfXH bGIzAI"
      href="https://telegram.me/share/url?text=&amp;url="
      rel="noreferrer noopener"
      target="_blank"
    >
      <TelegramIconFill>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M.707 8.475C.275 8.64 0 9.508 0 9.508s.284.867.718 1.03l5.09 1.897 1.986 6.38a1.102 1.102 0 0 0 1.75.527l2.96-2.41a.405.405 0 0 1 .494-.013l5.34 3.87a1.1 1.1 0 0 0 1.046.135 1.1 1.1 0 0 0 .682-.803l3.91-18.795A1.102 1.102 0 0 0 22.5.075L.706 8.475z"
          />
        </svg>
      </TelegramIconFill>
    </a>
  </styled.a>
</Button>
`;

exports[`Telegram 14 1`] = `
<Button
  simpleReverse={true}
>
  <styled.a
    aria-label="Share on Telegram"
    href="https://telegram.me/share/url?text=&amp;url="
    rel="noreferrer noopener"
    simpleReverse={true}
    target="_blank"
  >
    <a
      aria-label="Share on Telegram"
      className="sc-bwzfXH jHqTEf"
      href="https://telegram.me/share/url?text=&amp;url="
      rel="noreferrer noopener"
      target="_blank"
    >
      <TelegramIconFill>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M.707 8.475C.275 8.64 0 9.508 0 9.508s.284.867.718 1.03l5.09 1.897 1.986 6.38a1.102 1.102 0 0 0 1.75.527l2.96-2.41a.405.405 0 0 1 .494-.013l5.34 3.87a1.1 1.1 0 0 0 1.046.135 1.1 1.1 0 0 0 .682-.803l3.91-18.795A1.102 1.102 0 0 0 22.5.075L.706 8.475z"
          />
        </svg>
      </TelegramIconFill>
    </a>
  </styled.a>
</Button>
`;
